# QPath_ROS2_ws

install/: local_setup.sh  setup.sh
log/: latest_build
src/anomaly_detector/: package.xml  setup.py
src/camera_control/: package.xml  setup.cfg  setup.py
src/camera_control/camera_control/: ip_capture_node.py  ptz_node.py
src/camera_control/launch/: camera_control.launch.py
src/install/: local_setup.sh  setup.sh
src/live_analysis_ros2/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/live_analysis_ros2/launch/: analysis_node.launch.py
src/live_analysis_ros2/live_analysis_ros2/: CMakeLists.txt  camera_test.py  main.py  results.csv  run.sh  test.sh
src/live_analysis_ros2/live_analysis_ros2/datasets/: pvds.py
src/live_analysis_ros2/live_analysis_ros2/results/MVTecAD_Results/simplenet_mvtec/run/: results.csv
src/live_analysis_ros2/live_analysis_ros2/results/MVTecAD_Results/simplenet_mvtec/run/models/0/mvtec_bottle/tb/: events.out.tfevents.1710516237.meric.3634.12  events.out.tfevents.1710746538.meric.848.12
src/live_analysis_ros2/live_analysis_ros2/results/MVTecAD_Results/simplenet_mvtec/run/models/0/mvtec_cable/tb/: events.out.tfevents.1710506666.meric.3634.8  events.out.tfevents.1710746352.meric.848.8
src/live_analysis_ros2/live_analysis_ros2/results/MVTecAD_Results/simplenet_mvtec/run/models/0/mvtec_capsule/tb/: events.out.tfevents.1710490525.meric.3634.2  events.out.tfevents.1710746049.meric.848.2
src/live_analysis_ros2/live_analysis_ros2/results/MVTecAD_Results/simplenet_mvtec/run/models/0/mvtec_carpet/tb/: events.out.tfevents.1710493359.meric.3634.3  events.out.tfevents.1710746104.meric.848.3
src/live_analysis_ros2/live_analysis_ros2/results/MVTecAD_Results/simplenet_mvtec/run/models/0/mvtec_grid/tb/: events.out.tfevents.1710496290.meric.3634.4  events.out.tfevents.1710746154.meric.848.4
src/live_analysis_ros2/live_analysis_ros2/results/MVTecAD_Results/simplenet_mvtec/run/models/0/mvtec_hazelnut/tb/: events.out.tfevents.1710518392.meric.3634.13  events.out.tfevents.1710746573.meric.848.13
src/live_analysis_ros2/live_analysis_ros2/results/MVTecAD_Results/simplenet_mvtec/run/models/0/mvtec_leather/tb/: events.out.tfevents.1710521566.meric.3634.14  events.out.tfevents.1710746630.meric.848.14
src/live_analysis_ros2/live_analysis_ros2/results/MVTecAD_Results/simplenet_mvtec/run/models/0/mvtec_metal_nut/tb/: events.out.tfevents.1710513397.meric.3634.11  events.out.tfevents.1710746481.meric.848.11
src/live_analysis_ros2/live_analysis_ros2/results/MVTecAD_Results/simplenet_mvtec/run/models/0/mvtec_pill/tb/: events.out.tfevents.1710486930.meric.3634.1  events.out.tfevents.1710742201.meric.118.1  events.out.tfevents.1710743441.meric.302.1  events.out.tfevents.1710745981.meric.848.1
src/live_analysis_ros2/live_analysis_ros2/results/MVTecAD_Results/simplenet_mvtec/run/models/0/mvtec_screw/tb/: events.out.tfevents.1710483381.meric.3634.0  events.out.tfevents.1710742122.meric.118.0  events.out.tfevents.1710743367.meric.302.0  events.out.tfevents.1710745288.meric.689.0  events.out.tfevents.1710745912.meric.848.0  events.out.tfevents.1710838481.meric.4728.0
src/live_analysis_ros2/live_analysis_ros2/results/MVTecAD_Results/simplenet_mvtec/run/models/0/mvtec_tile/tb/: events.out.tfevents.1710498501.meric.3634.5  events.out.tfevents.1710746191.meric.848.5
src/live_analysis_ros2/live_analysis_ros2/results/MVTecAD_Results/simplenet_mvtec/run/models/0/mvtec_toothbrush/tb/: events.out.tfevents.1710509819.meric.3634.9  events.out.tfevents.1710746416.meric.848.9
src/live_analysis_ros2/live_analysis_ros2/results/MVTecAD_Results/simplenet_mvtec/run/models/0/mvtec_transistor/tb/: events.out.tfevents.1710511002.meric.3634.10  events.out.tfevents.1710746437.meric.848.10
src/live_analysis_ros2/msg/: TrainAlgorithmMsg.msg
src/liver_analysis_interfaces/: CMakeLists.txt  package.xml
src/liver_analysis_interfaces/msg/: StopTestingRequest.msg  StopTrainingRequest.msg  TestDone.msg  TestModelMsg.msg  TestResultMsg.msg  TrainResultMsg.msg  TrainingResult.msg
src/my_cpp_server_tools/: CMakeLists.txt
src/my_cpp_server_tools/src/: my_cpp_node.cpp
(+298 files in other folders)
