<?xml version="1.0"?>
<package format="3">
  <name>camera_control</name>
  <version>0.1.0</version>
  <description>ROS 2 package for Hikvision IP camera streaming and PTZ control</description>
  <maintainer email="burcu@example.com">Burcu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>onvif-zeep</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>