<?xml version="1.0"?>
<package format="3">
  <name>live_analysis_ros2</name>
  <version>0.1.0</version>
  <description>Live analysis node with SimpleNet and YOLO for ROS 2</description>

  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <!-- For custom messages -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Other common tools -->
  <exec_depend>cv_bridge</exec_depend>

  <!-- Optional: If you use Python packages -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-pillow</exec_depend>
  <exec_depend>python3-torch</exec_depend>
  <exec_depend>python3-torchvision</exec_depend>
  <exec_depend>python3-ultralytics</exec_depend>





  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
